Implemented Best products, Latest Products and Main page Animation with Carousel

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
+@import "./components/slider/SliderCompo.module.css";
+@import "./components/header/Header.module.css";
+@import "./components//perfumeAccessoryTab/perfumeAccessoryTab.module.css";
+@import "./components/bestProduct/BestProduct.module.css";
+@import "./components/latestProduct/LatestProduct.module.css";
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
