--- a/src/components/bestProduct/BestProduct.module.css
+++ b/src/components/bestProduct/BestProduct.module.css
@@ -12,16 +12,20 @@
 .best-product-group {
   display: flex;
   justify-content: center;
-
   margin-top: 20px;
 }
-.best-product {
-  width: 25%;
+.best-product:first-child {
+  margin-left: 50px;
 }
+.best-product:nth-child(4) {
+  margin-right: 50px;
+}
+
 .best-product img {
   width: 100%;
+  /* width: 25vw; */
   height: 30vw;
-  padding: 10px;
+  padding: 20px;
   padding-bottom: 0;
   cursor: pointer;
   overflow: hidden;
@@ -30,22 +34,24 @@
   transform: scale(1.022);
   transition: all 0.6s;
 }
+/*  */
+/* .best-product {
+  position: relative;
+} */
+/*  */
 .best-product-text {
   text-align: left;
   margin: 0;
-  margin-left: 13px;
   cursor: pointer;
 }
 
 .best-product-text .filter {
-  /* font-size: 110%; */
   font-size: 1.09vw;
   font-family: Playfair Display, serif;
   color: #535353;
   letter-spacing: -0.02em;
 }
 .best-product-text .title {
-  /* font-size: 110%; */
   font-size: 1.65vw;
   font-family: Playfair Display, serif;
   font-weight: 500;
@@ -59,9 +65,13 @@
   font-size: 1.2vw;
   font-family: Playfair Display, serif;
 }
+
 /* VIEW MORE BTN */
 .view-more-btn-box button {
   margin-top: 20px;
+
+  font-family: Playfair Display, serif;
+  letter-spacing: -0.02em;
 
   width: 13vw;
   padding: 11px;
@@ -81,9 +91,11 @@
 @media screen and (max-width: 780px) {
   .best-product {
     width: 24.6%;
+    /* width: 25%; */
   }
   .best-product img {
-    width: 24.5vw;
+    /* width: 24.5vw; */
+    width: 25vw;
     height: 38vw;
   }
   .best-product img:hover {
