--- a/src/components/slider/SliderCompo.module.css
+++ b/src/components/slider/SliderCompo.module.css
@@ -2,12 +2,18 @@ body {
   overflow-x: hidden;
 }
 
+.wrapper img {
+  object-fit: cover;
+}
+
 .summer {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 5;
+
+  letter-spacing: -0.001em;
   color: white;
   font-size: 8vw;
 }
@@ -18,12 +24,16 @@ body {
   position: absolute;
   top: 18%;
   left: 53%;
-  /* transform: translate(-50%, -50%); */
   z-index: 5;
   font-size: 2.5vw;
 
+  font-family: Playfair Display, serif;
+  letter-spacing: -0.04em;
+  cursor: auto;
+
   animation-name: leftAni12;
   animation-duration: 5.2s;
+  animation-delay: 1s;
   animation-iteration-count: infinite;
 }
 .wrapper {
